# agentGraph

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LOGGING_ENHANCEMENT.md  OPTIMIZATION_SUMMARY.md  README.md  REFACTORING_NOTES.md  TEST_RESULTS.md  TODO.md  main.py  orchestration_main.py  pyproject.toml  pytest.ini  simple_main.py  test_detailed.py  test_mention_tools.py  test_multiturn.py  test_persistence.py  test_refactor.py  test_simple_persistence.py  test_step1.py  test_step2.py  test_streaming.py  test_subagent_simple.py  test_weather.py
agentgraph/agents/: __init__.py  factory.py  interfaces.py
agentgraph/config/: __init__.py  settings.py  tools.yaml
agentgraph/graph/: __init__.py  builder.py  message_utils.py  prompts.py  routing.py  state.py
agentgraph/models/: __init__.py  registry.py  typing.py
agentgraph/runtime/: app.py  (+1 more)
docs/: ARCHITECTURE.md  CONTEXT_MANAGEMENT.md  DEVELOPMENT.md  E2E_TESTING_SOP.md  FEATURES.md  HITL_TESTING_SOP.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INDEX.md  MCP_INTEGRATION.md  MCP_QUICKSTART.md  OPTIMIZATION.md  README.md  REQUIREMENTS_PART1_ARCHITECTURE.md  REQUIREMENTS_PART2_WORKSPACE.md  REQUIREMENTS_PART3_MENTIONS.md  REQUIREMENTS_PART4_TRICKS.md  REQUIREMENTS_PART5_MCP.md  REQUIREMENTS_PART6_HITL.md  SKILLS_CONFIGURATION.md  TESTING.md  TESTING_GUIDE.md  TESTING_MCP.md  restructure_doc.py  产品开发规划.md  功能清单-Trello导入.csv  功能清单-开发任务.md  桌面 AI 框架需求.md  桌面 AI 框架需求.md.backup
generalAgent/: __init__.py  cli.py  main.py
orchestrationAgent/: FINAL_STATUS.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py
scripts/: reorder_chapters.py  restructure_prd.py  test_mcp_integration.py  test_mcp_quick.sh
simpleAgent/: IMPLEMENTATION.md  README.md  __init__.py  cli.py  simple_agent.py
tests/: AUTO_COMPRESSION_FIX_SUMMARY.md  AUTO_COMPRESSION_TESTS.md  README.md  README_AGENT_TESTS.md  conftest.py  run_tests.py  test_agent_call_stack.py  test_agent_registry_integration.py  test_content_cleaning.py  test_file_ops.py  test_handoff_pattern.py  test_mention_types.py  test_real_scenarios.py  test_registry_on_demand.py  test_run_script.py  test_skill_detection.py  test_skill_md_loader.py  test_tool_config.py  test_tool_scanner.py  test_workspace_integration.py  test_workspace_manager.py
uploads/: README.md  analysis.txt  test.txt
(+253 files in other folders)
