[project]
name = "agentgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.1",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pypdf>=6.1.3",
    "pillow>=12.0.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "reportlab>=4.4.4",
    "httpx>=0.27.0",
]
