[project]
name = "agentgraph"
version = "0.1.0"
description = "agents for AI PC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.1",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    # Document processing
    "pypdf>=6.1.3",
    "pillow>=12.0.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "reportlab>=4.4.4",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",
    "httpx>=0.27.0",
]
