[project]
name = "agentgraph"
version = "0.1.0"
description = "agents for AI PC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.1",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    # Document processing - Core
    "pymupdf>=1.26.5",  # PDF extraction (better quality than pdfplumber)
    "pillow>=12.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",
    "httpx>=0.27.0",
    "jieba>=0.42.1",  # Chinese segmentation for FTS5
    "jinja2>=3.1.0",  # Template engine for SimpleAgent
    "mcp>=1.0.0",  # Model Context Protocol
    "pypdf>=6.1.3",  # PDF form reading and filling
    "pywin32>=306; sys_platform == 'win32'",  # Windows screenshot tools
]

[project.optional-dependencies]
test = [
    "reportlab>=4.4.4",  # Test PDF generation
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

pdf-skills = [
    "pypdf>=6.1.3",       # PDF form filling (skill scripts)
    "pdf2image>=1.17.0",  # PDF to images (skill scripts)
]
